--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
-  "name": "04beta",
+  "name": "prc18",
   "version": "0.0.1",
-  "description": "backend",
+  "description": "Proyecto04 API REST",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
-  "author": "yo",
+  "author": "Diego Waisrub",
   "license": "ISC",
   "dependencies": {
-    "express": "4.18.2",
-    "mysql": "2.18.1",
-    "mysql2": "2.3.3",
-    "nodemon": "2.0.20",
-    "sequelize": "6.25.3",
-    "sequelize-cli": "6.5.2"
+    "bcrypt": "^5.1.0",
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.3.2",
+    "nodemon": "^2.0.14",
+    "sequelize": "^6.25.6",
+    "sequelize-cli": "^6.2.0",
+    "winston": "^3.3.3"
   }
 }
