--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,11 @@
 {
   "development": {
     "username": "root",
-    "password": "root",
-    "database": "MovieRentalDB",
-    "host": "127.0.0.1",
+    "password": "vFCbA91mgqdcgxNviENM",
+    "database": "railway",
+    "host": "containers-us-west-30.railway.app",
     "dialect": "mysql",
-    "port": "33660"
+    "port": "7117"
   },
   "test": {
     "username": "root",
