--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "root",
-    "database": "MovieRentalDB",
+    "database": "movierentaldb",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "port": "3306"
